update to latest upload script

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,16 +1,13 @@
-bintray.bintrayRepo=maven
-bintray.bintrayName=math-library
-
-bintray.publishedGroupId=com.xlythe
 bintray.libraryName=MathLibrary
+
+bintray.groupId=com.xlythe
 bintray.artifact=math-library
+bintray.libraryVersion=1.0.0
 
 bintray.libraryDescription='A library that takes math equations as a string and returns a result'
 
 bintray.siteUrl=https://github.com/Xlythe/MathLibrary
 bintray.gitUrl=https://github.com/Xlythe/MathLibrary.git
-
-bintray.libraryVersion=1.0.0
 
 bintray.developerId=xlythe
 bintray.developerName=William Harmon
