--- a/math-library/src/main/AndroidManifest.xml
+++ b/math-library/src/main/AndroidManifest.xml
@@ -1,6 +1,1 @@
-<?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.xlythe.math">
-
-    <application />
-
-</manifest>
+<manifest package="com.xlythe.math" />
