--- a/math-library/build.gradle
+++ b/math-library/build.gradle
@@ -93,7 +93,7 @@ signing {
 
 dependencies {
     api fileTree(include: ['*.jar'], dir: 'libs')
-    api project(':arity')
+    implementation project(':arity')
     api 'org.ejml:ejml-all:[0.41,)'
     testImplementation 'org.robolectric:robolectric:+'
     testImplementation 'junit:junit:4.13.2'
